#-------------------------------------
# ChangeLog file for package Detector
#-------------------------------------

Package author: Mikhail Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

=======

Tag: V02-00-32
2021-02-11 Mikhail Dubrovin
modified:
   ../app/jungfrau_dark_proc - note that option --upload or -u is deprecated and not used
   ../examples/test-issues-2022.py - add issue_2022_02_09
   UtilsCalib.py - refactoring - in DarkProc add/use parameter datbits, save in block raw data without data bit-mask
   UtilsJungfrau.py - code cleaning - remove blanks
   UtilsJungfrauCalib.py - add/use DarkProcJungfrau derived from DarkProc to define pixels with bad gain mode switch

Tag: V02-00-31
2021-01-25 Mikhail Dubrovin
- app/epix10ka_deploy_constants, epix10ka_pedestals_calibration - replace logging.basicConfig with init_logger
- app/jungfrau_dark_proc, jungfrau_deploy_constants - change dirmode=0o775->0o777, filemode=0o664->0o666
- src/UtilsCalib.py - use os.umask(0o0), change dirmode=0o775->0o777, filemode=0o664->0o666
- src/UtilsEpix10kaCalib.py - use os.umask(0o0), change dirmode=0o775->0o777, filemode=0o664->0o666
- src/UtilsJungfrauCalib.py - change dirmode=0o775->0o777, filemode=0o664->0o666

Tag: V02-00-30
2021-01-06 Mikhail Dubrovin
	modified:   PyDetectorAccess.py - code cleaning - remove blanks and comments
	modified:   ../src/AreaDetector.py - add *psf methods using PSCalib/GeometryAccess -> UtilsPSF
	new file:   test-issues-2022.py - use it as test examples

Tag: V02-00-29
2021-12-10 Mikhail Dubrovin
- app/datinfo for id_jungfrau source -> det.source
- app/epix10ka_pedestals_calibration - code cleaning
- fix issue reported by Silke about file/dir permissions for JF
  - app/jungfrau_dark_proc, jungfrau_deploy_constants
    - add dirmode=0o775, filemode=0o664
  - src/UtilsCalib.py
    - add use mode=0o775, filemode=0o664
    - update class RepoManager
	- explicitly create intermediate rirs and do chmod